--- a/source/userguide/art/PrecisionLayout.cfg
+++ b/source/userguide/art/PrecisionLayout.cfg
@@ -11,7 +11,7 @@
     # This extension is used in the save file export dialog.
     output_format = .txt
     # This title is shown in the export dialog and is used by the user to differentiate between the possible different postprocessor configurations.
-    output_text = Plasmatic
+    output_text = PrecisionLayout
     # This type defines the output format used in the export dialog.
     output_type = g-code
     
