--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "restructuredtext.confPath": "c:\\WorkData\\Plasmatic\\plasmaticdocs"
+    "restructuredtext.confPath": "c:\\WorkData\\PrecisionLayout\\plcdocs"
 }
